# sorato

./: .gitignore  Cargo.toml  LICENSE  README.md
frontend/: bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: api.ts  app.tsx  index.scss  index.tsx  sse.ts  utils.ts  vite-env.d.ts
frontend/src/components/: clients.tsx  disabled.module.scss  disabled.tsx  library.module.scss  library.tsx  login.module.scss  login.tsx  navbar.module.scss  navbar.tsx  overlay.module.scss  overlay.tsx  progress.module.scss  progress.tsx
src/: auth.rs  cors.rs  logger.rs  main.rs
src/middleware/: auth.rs  mod.rs
src/model/: actor.rs  audio.rs  client.rs  mod.rs  state.rs  stream.rs
src/routes/: assets.rs  extractor.rs  mod.rs
src/routes/v1actor/: actor.rs  audio.rs  mod.rs  stream.rs
src/routes/v1client/: mod.rs
