[package]
name = "sorato"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
lofty = "0.18.2"
log = "0.4.21"
pin-project-lite = "0.2.14"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
