[package]
name = "sorato"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-governor = "0.5.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-web-lab = "0.20.2"
bincode = "1.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
lofty = "0.18.2"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "fs"] }
